[package]
name = "type1_5-helloworld"
version = "0.1.0"
edition = "2021"
authors = ["PeizhongQiu<qiupeizhong@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libax = { path = "../../ulib/libax", features = ["type1_5","alloc"]}
