[package]
name = "axdtb"
version = "0.2.3"
authors = ["Chien Zhang (zqy0224@live.com)"]
edition = "2021"
description = "no std but alloc depended device tree blob parsing lib"
license = "MIT"
repository = "https://github.com/d3ara1n/dtb_parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axlog = { path = "../axlog" }

[features]
